<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.madebysearde.bmicalculator.ImperialActivity">

    <TextView
        android:id="@+id/imperial_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/enter_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/heightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:text="@string/Height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imperial_label" />

    <TextView
        android:id="@+id/weightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:text="@string/Weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightLabel" />

    <EditText
        android:id="@+id/inch_textbox"
        android:layout_width="60dp"
        android:layout_height="47dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/imperial_height_hint2"
        android:inputType="number"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/feet_textbox"
        app:layout_constraintTop_toBottomOf="@+id/imperial_label" />

    <EditText
        android:id="@+id/pound_textbox"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/imperial_weight_hint1"
        android:inputType="number"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/weightLabel"
        app:layout_constraintTop_toBottomOf="@+id/inch_textbox" />

    <EditText
        android:id="@+id/feet_textbox"
        android:layout_width="60dp"
        android:layout_height="47dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/imperial_height_hint1"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/inch_textbox"
        app:layout_constraintStart_toEndOf="@+id/heightLabel"
        app:layout_constraintTop_toBottomOf="@+id/imperial_label" />

    <Button
        android:id="@+id/calc_bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/roundedrect_lightblue"
        android:text="@string/calcbmi"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pound_textbox" />
</android.support.constraint.ConstraintLayout>
